Split files + Workaround for reset

--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -29,192 +29,8 @@
         <!--{{>detailedResults athlete=a}}-->
     {{/each}}
 
-    <div class="popover popover-sorting">
-        <div class="popover-angle"></div>
-        <div class="popover-inner">
-            <div class="list-block sortable" id="sortOrderSorter">
-                <ul>
-                    {{#each s in baseSortingSettings}}
-                        {{#with s}}
-                            <li>
-                                <div class="item-content" data-id="{{id}}">
-                                    <div class="item-media"><i class="f7-icons">{{icon}}</i></div>
-                                    <div class="item-inner">
-                                        <div class="item-title">{{name}}</div>
-                                    </div>
-                                </div>
-                                <!-- Sortable handler  -->
-                                <div class="sortable-handler"></div>
-                            </li>
-                        {{/with}}
-                    {{/each}}
-                </ul>
-            </div>
-            <div class="button-highlight sorting-reset-button">Reset</div>
-        </div>
-    </div>
-
-    <div class="popover popover-filter">
-        <div class="popover-angle"></div>
-        <div class="popover-inner">
-            <div class="list-block accordion-list">
-                <ul>
-                    {{#with groupSettings}}
-                        <li class="accordion-item">
-                            <a href="" class="item-link item-content">
-                                <div class="item-media"><i class="f7-icons">persons</i></div>
-                                <div class="item-inner">
-                                    <div class="item-title">Gruppen</div>
-                                    <div class="item-after">{{text}}</div>
-                                </div>
-                            </a>
-                            <div class="accordion-item-content" style="padding-left: 5%;">
-                                <div class="list-block">
-                                    <ul>
-                                        {{#each g in groupNames}}
-                                            <li>
-                                                <div class="item-content">
-                                                    <div class="item-inner">
-                                                        <div class="item-title label">{{g}}</div>
-                                                        <div class="item-input">
-                                                            <label class="label-switch">
-                                                                <input type="checkbox" {{groupChecked g}}>
-                                                                <div class="checkbox" data-type="group"
-                                                                     data-attr="{{g}}"></div>
-                                                            </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                    {{/with}}
-                    {{#with genderSettings}}
-                        <li class="accordion-item">
-                            <a href="" class="item-link item-content">
-                                <div class="item-media"><i class="f7-icons">heart</i></div>
-                                <div class="item-inner">
-                                    <div class="item-title">Geschlecht</div>
-                                    <div class="item-after">{{text}}</div>
-                                </div>
-                            </a>
-                            <div class="accordion-item-content" style="padding-left: 5%;">
-                                <div class="list-block">
-                                    <ul>
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title label">Männlich</div>
-                                                    <div class="item-input">
-                                                        <label class="label-switch">
-                                                            <input type="checkbox" {{checked m}}>
-                                                            <div class="checkbox" data-type="gender"
-                                                                 data-attr="m"></div>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title label">Weiblich</div>
-                                                    <div class="item-input">
-                                                        <label class="label-switch">
-                                                            <input type="checkbox" {{checked w}}>
-                                                            <div class="checkbox" data-type="gender"
-                                                                 data-attr="w"></div>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                    {{/with}}
-                    {{#with statusSettings}}
-                        <li class="accordion-item">
-                            <a href="" class="item-link item-content">
-                                <div class="item-media"><i class="f7-icons">tags</i></div>
-                                <div class="item-inner">
-                                    <div class="item-title">Urkundenstatus</div>
-                                    <div class="item-after">{{text}}</div>
-                                </div>
-                            </a>
-                            <div class="accordion-item-content" style="padding-left: 5%;">
-                                <div class="list-block">
-                                    <ul>
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title label">Bereit</div>
-                                                    <div class="item-input">
-                                                        <label class="label-switch">
-                                                            <input type="checkbox" {{checked ready}}>
-                                                            <div class="checkbox" data-type="status"
-                                                                 data-attr="ready"></div>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title label">Neu Erstellen</div>
-                                                    <div class="item-input">
-                                                        <label class="label-switch">
-                                                            <input type="checkbox" {{checked update}}>
-                                                            <div class="checkbox" data-type="status"
-                                                                 data-attr="update"></div>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title label">Nicht Bereit</div>
-                                                    <div class="item-input">
-                                                        <label class="label-switch">
-                                                            <input type="checkbox" {{checked notReady}}>
-                                                            <div class="checkbox" data-type="status"
-                                                                 data-attr="notReady"></div>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title label">Fertig</div>
-                                                    <div class="item-input">
-                                                        <label class="label-switch">
-                                                            <input type="checkbox" {{checked finish}}>
-                                                            <div class="checkbox" data-type="status"
-                                                                 data-attr="finish"></div>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                    {{/with}}
-                </ul>
-            </div>
-        </div>
-    </div>
-
+    {{>outputFilterPopover}}
+    {{>outputSortingPopover}}
 </template>
 
 
