Fixed title bar of popups

--- a/meteor/client/components/popup.html
+++ b/meteor/client/components/popup.html
@@ -1,7 +1,7 @@
 <template name="popup">
     <div class="popup {{class}}" style="overflow: hidden;">
         <div class="content-block" style="height: 100%;">
-            <div style="height: 15%; overflow-y: auto;">
+            <div style="height: 15%;">
                 <a href="#" class="close-popup"><i class="f7-icons vcenterIcon link"
                                                    style="float: left;">chevron_left</i></a>
                 <h1 class="t-center">{{title}}</h1>
