--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -35,13 +35,18 @@
                         </div>
                     </div>
                     <div class="right">
-                        <a href="#"
-                           class="fwd-button t-left fade {{#if forwardButtonShown}}fade-in{{/if}}">{{forwardButton}}</a>
                         {{#if printButtonShown}}
-                        <a href="#"
-                           class="print-button t-left fade fade-in">
-                            <i class="f7-icons">download</i></a>
+                            <a href="#" class="print-button t-left fade fade-in">
+                                <i class="f7-icons">download</i>
+                            </a>
                         {{/if}}
+                        <a href="#" class="fwd-button t-left fade {{#if forwardButtonShown}}fade-in{{/if}} {{#if
+                                (eq forwardIcon.level 2)}}disabled{{/if}}">
+                            {{#if forwardIcon}}
+                                {{> Template.dynamic template=forwardIcon.template data=forwardIcon.data}}
+                            {{/if}}
+                            {{forwardButton}}
+                        </a>
                     </div>
                 </div>
             </div>
