--- a/meteor/client/styles/generic.css
+++ b/meteor/client/styles/generic.css
@@ -57,11 +57,11 @@ html, html * {
 }
 
 .fade {
-    -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
-    -moz-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
-    -o-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
-    -ms-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
-    transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+    -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
+    -moz-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
+    -o-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
+    -ms-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
+    transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
     visibility: hidden;
     opacity: 0;
 }
@@ -70,6 +70,10 @@ html, html * {
     opacity: 1;
     visibility: visible;
     transition-delay: 0s;
+}
+
+a.disabled {
+    color: #90A4AE;
 }
 
 #__blaze-root{
