--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -72,27 +72,29 @@
 </template>
 
 <template name="accordionInnerListBlock">
-    <div class="content-block-title">{{title}}</div>
-    <div class="list-block">
-        <ul style="border: none;">
-            {{#each e in entries}}
-                <li data-stid="{{e.id}}">
-                    <div class="item-content" style="height: 8px;">
-                        <label class="label-checkbox item-content permission-input full-width"
-                               style="padding-right: 15px;">
-                            <input type="checkbox" {{isChecked checked e.id}}>
-                            <div class="item-media">
-                                <i class="icon icon-form-checkbox"></i>
-                            </div>
-                            <div style="padding-left: 15px;" class="item-inner">
-                                {{e.name}}
-                            </div>
-                        </label>
-                    </div>
-                </li>
-            {{/each}}
-        </ul>
-    </div>
+    {{#if not (isEmpty entries)}}
+        <div class="content-block-title">{{title}}</div>
+        <div class="list-block">
+            <ul style="border: none;">
+                {{#each e in entries}}
+                    <li data-stid="{{e.id}}">
+                        <div class="item-content" style="height: 8px;">
+                            <label class="label-checkbox item-content permission-input full-width"
+                                   style="padding-right: 15px;">
+                                <input type="checkbox" {{isChecked checked e.id}}>
+                                <div class="item-media">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                                <div style="padding-left: 15px;" class="item-inner">
+                                    {{e.name}}
+                                </div>
+                            </label>
+                        </div>
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
+    {{/if}}
 </template>
 
 <template name="ACitemContent">
