Removed old unused class

--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -1,7 +1,7 @@
 <template name="config">
     {{> offline}}
     <div class="pages">
-        <div data-page="index" class="page navbar-fixed toolbar-fixed">
+        <div data-page="index" class="page navbar-fixed">
 
             <div class="navbar">
                 <div class="navbar-inner">
