Redesigned competition delete button

--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -20,6 +20,9 @@
                                     readOnly}}>
                         </div>
                     </div>
+                    {{#if not active}}
+                        <span class="align-right delete-competition" data-id="{{_id}}"><i class="f7-icons"
+                                                                                          style="font-size: 22px; padding-right: 5px;">close_round</i></span>{{/if}}
                 </div>
             </a>
             <div class="accordion-item-content" data-id="{{_id}}">
@@ -30,7 +33,7 @@
                         <span class="align-right">{{type}}</span>
                     </p>
                     {{#if readOnly}}
-                        <p class="t-left">
+                        <p class="t-left">\
                             Sportarten
                             <a href="" class="align-right t-right button-highlight open-popup show-sportTypes"
                                data-popup=".popup-sportTypes-{{_id}}">Auflistung <i class="f7-icons"
@@ -50,13 +53,6 @@
                     {{else}}
                         <p>
                             <a href="" class="item-link list-button edit-button">Bearbeiten</a>
-                        </p>
-                    {{/if}}
-
-                    {{#if not active}}
-                        <p>
-                            <a href="" class="item-link list-button delete-button" data-id="{{_id}}"
-                               style="color: red;">Löschen</a>
                         </p>
                     {{/if}}
                 </div>
