--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -11,7 +11,7 @@
             height: 100%;
             position: absolute;
             z-index: 100;
-            visibility: visible;
+            /*visibility: visible;*/
         }
 
         .drop-zone.fade-in {
