--- a/meteor/client/styles/generic.css
+++ b/meteor/client/styles/generic.css
@@ -57,11 +57,11 @@ html, html * {
 }
 
 .fade {
-    -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
-    -moz-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
-    -o-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
-    -ms-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
-    transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out;
+    -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out, background-color 500ms ease-in-out;
+    -moz-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out, background-color 500ms ease-in-out;
+    -o-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out, background-color 500ms ease-in-out;
+    -ms-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out, background-color 500ms ease-in-out;
+    transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, color 500ms ease-in-out, background-color 500ms ease-in-out;
     visibility: hidden;
     opacity: 0;
 }
