--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -33,7 +33,7 @@
                         <span class="align-right">{{type}}</span>
                     </p>
                     {{#if readOnly}}
-                        <p class="t-left">\
+                        <p class="t-left">
                             Sportarten
                             <a href="" class="align-right t-right button-highlight open-popup show-sportTypes"
                                data-popup=".popup-sportTypes-{{_id}}">Auflistung <i class="f7-icons"
