Resized delete-icons and added hover transition

--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -135,8 +135,8 @@
                                         {{/if}}
                                     </div>
                                     {{#if not readOnly}}{{#if not g.collapsed}}
-                                        <span class="align-right remove-athlete"><i class="f7-icons"
-                                                                                    style="font-size: 20px; padding-right: 5px;">close_round</i></span>{{/if}}{{/if}}
+                                        <span class="align-right remove-athlete delete-icon"><i class="f7-icons"
+                                                                                                style="font-size: 17px; padding-right: 5px;">close_round</i></span>{{/if}}{{/if}}
                                 </div>
                             </a>
                             <div class="accordion-item-content">
