--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -21,8 +21,8 @@
                         </div>
                     </div>
                     {{#if not active}}
-                        <span class="align-right delete-competition" data-id="{{_id}}"><i class="f7-icons"
-                                                                                          style="font-size: 22px; padding-right: 5px;">close_round</i></span>{{/if}}
+                        <span class="align-right delete-competition delete-icon" data-id="{{_id}}"><i class="f7-icons"
+                                                                                                      style="font-size: 17px; padding-right: 5px;">close_round</i></span>{{/if}}
                 </div>
             </a>
             <div class="accordion-item-content" data-id="{{_id}}">
