Changed "Irgendwas" Text in COnfig UI when creating new Competition

--- a/meteor/client/components/config/overview/competitionTypePopup/competitionTypePopup.html
+++ b/meteor/client/components/config/overview/competitionTypePopup/competitionTypePopup.html
@@ -13,7 +13,7 @@
                                 <div class="item-inner">
                                     <div class="item-title-row">
                                         <div class="item-title">{{name}}</div>
-                                        <div class="item-after">Irgendwas</div>
+                                        <div class="item-after">Auswählen</div>
                                     </div>
                                     <div class="item-text"
                                          style="overflow: visible; height: auto; min-height: 42px; display: block;">{{description}}</div>
