Show number of athletes in competition overview

--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -44,7 +44,8 @@
                             {{#if (eq athleteCount 0)}}
                                 <span class="align-right">Keine Athleten vorhanden.</span>
                             {{else}}
-                                <a href="" class="align-right t-right button-highlight show-athletes">Anzeigen
+                                <a href="" class="align-right t-right button-highlight show-athletes">{{athleteCount}}
+                                    Athleten anzeigen
                                     <i class="f7-icons"
                                        style="font-size: 19px; display: inline-block; vertical-align: middle; padding-left: 5px">chevron_right</i></a>
                             {{/if}}
