new competition: Add meaningful text to competition types (closes #142)

--- a/meteor/client/components/config/competitionTypeInformation/competitionTypeInformation.html
+++ b/meteor/client/components/config/competitionTypeInformation/competitionTypeInformation.html
@@ -5,11 +5,11 @@
 </template>
 
 <template name="competitionTypeInformationContent">
-    <h2>Beschreibung</h2>
+    <h3 style="text-align: center;">Beschreibung</h3>
     <div style="text-align: center;">
-        {{data.general}}
+        {{data.description}}
     </div>
-    <h2>Bewertung</h2>
+    <h3 style="text-align: center;">Bewertung</h3>
     <div style="text-align: center;">
         {{data.rating}}
     </div>
