Added deletion capability to custom access codes (resolves #149)

--- a/meteor/client/styles/icons.scss
+++ b/meteor/client/styles/icons.scss
@@ -12,6 +12,7 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
   -ms-transition: color 250ms ease-in-out;
   -o-transition: color 250ms ease-in-out;
   transition: color 250ms ease-in-out;
+  color: #8e8e93;
 }
 
 .delete-icon:hover {
