--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -49,7 +49,7 @@
                 <li class="result-accordion {{#if custom}}accordion-item{{else}}item{{/if}}" data-id="{{c.id}}">
                     {{#if custom}}
                         <a href="" class="item-link item-content">
-                            {{>ACitemContent c=c}}
+                            {{>ACitemContent c=c custom=true}}
                         </a>
                     {{else}}
                         <div class="item-content">
@@ -113,7 +113,13 @@
     {{/if}}
     <div class="item-inner">
         <div class="item-title">{{c.name}}</div>
-        <div class="item-after">{{c.code}}</div>
+        <div class="item-after">
+            {{c.code}}
+            {{#if custom}}
+                <span class="align-right remove-custom-code delete-icon" style="padding-left: 15px"><i class="f7-icons"
+                                                                                                       style="font-size: 17px; padding-right: 5px;">close_round</i></span>
+            {{/if}}
+        </div>
     </div>
 </template>
 
