--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -5,7 +5,9 @@
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="left">
-
+                        <a href="#" data-popover=".popover-athletes" class="open-popover">
+                            <i class="f7-icons">bars</i>
+                        </a>
                     </div>
                     <div class="center truncate">
                         <div class="slider-title-wrapper">
