fixed spacing @ reset to default button in sorting popover in output UI

--- a/meteor/client/components/output/popovers/sorting.html
+++ b/meteor/client/components/output/popovers/sorting.html
@@ -20,7 +20,7 @@
                     {{/each}}
                 </ul>
             </div>
-            <div class="button-highlight sorting-reset-button">Reset</div>
+            <div class="button-highlight sorting-reset-button">Auf Standart Zurücksetzen</div>
         </div>
     </div>
 </template>
