--- a/meteor/client/components/output/output.css
+++ b/meteor/client/components/output/output.css
@@ -1,5 +1,7 @@
 .sorting-reset-button {
     width: 100%;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     text-align: center;
+    overflow: hidden;
 }
