--- a/meteor/client/components/popup.html
+++ b/meteor/client/components/popup.html
@@ -1,5 +1,5 @@
 <template name="popup">
-    <div class="popup {{class}}" style="overflow: hidden;">
+    <div class="popup {{class}}" style="overflow: hidden; z-index: 100000">
         <div class="content-block" style="height: 100%;">
             <div style="height: 15%;">
                 <a href="#" class="close-popup"><i class="f7-icons vcenterIcon link"
