--- a/meteor/client/components/popup.html
+++ b/meteor/client/components/popup.html
@@ -3,7 +3,7 @@
         <div class="content-block" style="height: 100%;">
             <div style="height: 15%;">
                 <a href="#" class="close-popup"><i class="f7-icons vcenterIcon link"
-                                                   style="float: left;">chevron_left</i></a>
+                                                   style="float: left;">close</i></a>
                 <h1 class="t-center">{{title}}</h1>
                 <h5 class="t-center">{{subtitle}}</h5>
             </div>
