--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -14,9 +14,10 @@
                     {{/if}}
                 </div>
                 <div class="item-inner">
-                    <div style="display: inline-block">
-                        <div class="item-title" style="display: inline-block; vertical-align: middle;">
-                            <input type="text" class="title-input" data-id="{{_id}}" value="{{name}}" {{setReadOnly
+                    <div style="display: inline-block; width: 75%;">
+                        <div class="item-title full-width" style="display: inline-block; vertical-align: middle;">
+                            <input type="text" class="title-input full-width" data-id="{{_id}}"
+                                   value="{{name}}" {{setReadOnly
                                     readOnly}}>
                         </div>
                     </div>
