Added basic CSV parsing

--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -152,8 +152,8 @@
                                                                               style="display:inline-block; vertical-align: middle; padding-right: 10px">add</i>
                 Gruppe hinzufügen
             </div>
-            <div class="content-block t-center button-highlight import-csv"><i class="f7-icons"
-                                                                               style="display:inline-block; vertical-align: middle; padding-right: 10px">add</i>
+            <div class="content-block t-center button-highlight import-csv open-popup" data-popup=".popup-csv-import">
+                <i class="f7-icons" style="display:inline-block; vertical-align: middle; padding-right: 10px">add</i>
                 CSV Datei importieren
             </div>
         {{/if}}
