Added basic drag-n-drop functionality #158

--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -77,7 +77,7 @@
                                 {{> athleteList}}
                             {{/if}}
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide csv-dropzone">
                             {{> athleteList}}
                         </div>
                         <div class="swiper-slide">
